@@ -1,8 +1,13 @@
 2010-12-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+	
+	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
+	new discovery parameter: RFC2863_IF_MIB::ifnick-from-ifname
+	provides backwards compatibility with devices which have non-unique
+	ifName values
 
 	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
 	ifDescr and ifName are checked for uniqueness before being used for
-	default interface indexing
+	default interface indexing	
 
 2010-12-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
